course_project/manifests/base/nats/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/component: messaging
    app.kubernetes.io/part-of: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nats
  serviceName: nats
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nats
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8222"
        prometheus.io/path: "/metrics"
      containers:
        - name: nats
          image: docker.io/bitnami/nats:2.10.7
          ports:
            ports:
              - containerPort: 4222
              - containerPort: 8222
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
