course_project/manifests/base/nats/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-headless
  labels:
    app.kubernetes.io/instance: nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.11.8
    helm.sh/chart: nats-9.0.28
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-client
      port: 4222
      targetPort: client
    - name: tcp-cluster
      port: 6222
      targetPort: cluster
    - name: tcp-monitoring
      port: 8222
      targetPort: monitoring
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: nats
    app.kubernetes.io/name: nats
