course_project/manifests/base/nats/metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-metrics
  labels:
    app.kubernetes.io/instance: nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.11.8
    helm.sh/chart: nats-9.0.28
    app.kubernetes.io/component: metrics
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "7777"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  
  ports:
    - name: tcp-metrics
      port: 7777
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: nats
    app.kubernetes.io/name: nats
