course_project/manifests/base/nats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app.kubernetes.io/instance: nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.11.8
    helm.sh/chart: nats-9.0.28
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 4222
      targetPort: client
      nodePort: null
    - name: tcp-cluster
      port: 6222
      targetPort: cluster
      nodePort: null
    - name: tcp-monitoring
      port: 8222
      targetPort: monitoring
      nodePort: null
  selector:
    app.kubernetes.io/instance: nats
    app.kubernetes.io/name: nats
